...
            return "Betting"
        }
    }
}

enum Difficulty: String {
    case easy = "easy"
    case medium = "medium"
    case complex = "complex"
    
    var color: String {
        switch self {
        case .easy:
...
